# fast_talk_server

./: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20240815_214045_login_history.rs  m20240815_221219_add_email_to_credentials.rs  m20240816_200240_create_chat_tables.rs  m20240817_175500_add_unique_constraint_on_chat_participants.rs  m20240821_214200_initial.rs  m20240821_215154_initial.rs
notes/: sea_orm.txt  workflow.txt
sql/: delete.sql  selects.sql
src/: establish_connection.rs  main.rs
src/db/read/: chat_participants.rs  chats.rs  credentials.rs  messages.rs  mod.rs  retrieve_chat_usernames.rs
src/db/write/: add_new_message_and_update_chat.rs  chat_participants.rs  chats.rs  create_new_chat_with_participants.rs  credentials.rs  login_history.rs  messages.rs  mod.rs
src/entities/: chat_participants.rs  chats.rs  credentials.rs  login_history.rs  messages.rs  mod.rs
src/handlers/: auth_handlers.rs  health_handler.rs  mod.rs
src/handlers/auth_handlers/: login.rs  mod.rs  register.rs  retrieve_personal_info.rs
src/handlers/chat_handlers/: create_chat.rs  mod.rs  retrieve_chat_messages.rs  retrieve_chats_list.rs  search_for_usernames.rs  send_message.rs  send_private_chat_message.rs
src/middleware/: auth_middleware.rs  jwt_verify.rs  mod.rs
src/middleware/auth_middleware/: login_middleware.rs  mod.rs  (+1 more)
src/routes/: auth_routes.rs  chat_routes.rs  mod.rs
src/types/: globals.rs  incoming_requests.rs  mod.rs  outgoing_responses.rs  types.rs
src/utils/: hash.rs  mod.rs  sign_jwt.rs
(+14 files in other folders)
