[package]
name = "fast_talk_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For working with JSON data
validator = "0.14"
validator_derive = "0.14"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio"]}
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
