[package]
name = "fast_talk_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For working with JSON data
validator = "0.14"
validator_derive = "0.14"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio"]}
argon2 = "0.5.3"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
env_logger = "0.11.5"
actix-http = "3.9.0"
chrono = { version =  "0.4.38", features = ["serde"]}
actix-web-actors = "4.3.1"
actix = "0.13.5"
actix-cors = "0.6"
url = "2.5.2"
